--- a/tools/pipelines/run-capture.yaml
+++ b/tools/pipelines/run-capture.yaml
@@ -69,7 +69,7 @@ stages:
             inputs:
               source: current
               artifactName: artifacts-from-portal
-              targetPath: $(Pipeline.Workspace)/artifacts-from-portal
+              targetPath: $(Pipeline.Workspace)/${{ parameters.OUTPUT_FOLDER_PATH }}
           - task: PowerShell@2
             displayName: Create pull request
             inputs:
