--- a/tools/pipelines/run-release.yaml
+++ b/tools/pipelines/run-release.yaml
@@ -26,7 +26,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-latest'
   steps:
-  - template: ./tools/pipelines/release-with-env.yaml
+  - template: ./run-release-with-env.yaml
     parameters:
       ENVIRONMENT: 'Dev'
       OUTPUT_FOLDER_PATH: ${{ parameters.OUTPUT_FOLDER_PATH }}
@@ -37,7 +37,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-latest'
   steps:
-  - template: ./tools/pipelines/release-with-env.yaml
+  - template: ./run-release-with-env.yaml
     parameters:
       ENVIRONMENT: 'Prod'
       OUTPUT_FOLDER_PATH: ${{ parameters.OUTPUT_FOLDER_PATH }}
