--- a/tools/pipelines/run-release-with-env.yaml
+++ b/tools/pipelines/run-release-with-env.yaml
@@ -24,7 +24,7 @@ steps:
 
   - task: UseNode@1
     inputs:
-      versionSpec: '18'
+      version: '18.x'
       checkLatest: true
 
   - task: PowerShell@2
