--- a/tools/pipelines/run-release.yaml
+++ b/tools/pipelines/run-release.yaml
@@ -31,14 +31,18 @@ jobs:
       ENVIRONMENT: 'Dev'
       OUTPUT_FOLDER_PATH: ${{ parameters.OUTPUT_FOLDER_PATH }}
 
-- job: release_stage
+- deployment: release_stage
   displayName: 'Release to Stage'
   dependsOn: release_dev
   pool:
     vmImage: 'ubuntu-latest'
   environment: 'Prod'
-  steps:
-  - template: ./run-release-with-env.yaml
-    parameters:
-      ENVIRONMENT: 'Prod'
-      OUTPUT_FOLDER_PATH: ${{ parameters.OUTPUT_FOLDER_PATH }}
+  strategy:
+    # default deployment strategy, more coming...
+    runOnce:
+      deploy:
+        steps:
+        - template: ./run-release-with-env.yaml
+          parameters:
+            ENVIRONMENT: 'Prod'
+            OUTPUT_FOLDER_PATH: ${{ parameters.OUTPUT_FOLDER_PATH }}
