--- a/tools/pipelines/run-release-with-env.yaml
+++ b/tools/pipelines/run-release-with-env.yaml
@@ -39,7 +39,7 @@ steps:
     inputs:
       targetType: 'inline'
       script: |
-        node ./scripts.v3/generate --subscriptionId  "$(AZURE_SUBSCRIPTION_ID)" --resourceGroupName "$(RESOURCE_GROUP_NAME)" --serviceName "$(APIM_NAME)" --tenantId "$(AZURE_TENANT_ID)" --servicePrincipal "$(AZURE_CLIENT_ID)"  --servicePrincipalSecret "$(AZURE_CLIENT_SECRET)"  --folder "$(System.DefaultWorkingDirectory)/$(OUTPUT_FOLDER_PATH)/snapshot"
+        node ./scripts.v3/generate --subscriptionId  "$(AZURE_SUBSCRIPTION_ID)" --resourceGroupName "$(RESOURCE_GROUP_NAME)" --serviceName "$(APIM_NAME)" --tenantId "$(AZURE_TENANT_ID)" --servicePrincipal "$(AZURE_CLIENT_ID)"  --servicePrincipalSecret "$(AZURE_CLIENT_SECRET)"  --folder "$(System.DefaultWorkingDirectory)/${{ parameters.OUTPUT_FOLDER_PATH }}/snapshot"
 
   - task: PowerShell@2
     displayName: 'Run Update Urls'
