--- a/tools/pipelines/run-release-with-env.yaml
+++ b/tools/pipelines/run-release-with-env.yaml
@@ -47,8 +47,7 @@ steps:
       targetType: 'inline'
       script: |
         $jsonLeft = (Get-Content "dev-portal/existingUrls.json" -Raw) | ConvertFrom-Json
-        $existingUrls = $jsonLeft.uri -replace ",\s*", ","
+        $existingUrls = $jsonLeft.uri -replace ",\s*", "," # Remove spaces between items
         $jsonRight = (Get-Content "dev-portal/urls.${{ parameters.ENVIRONMENT }}.json".ToLower() -Raw) | ConvertFrom-Json
-        
-        $targetUrls = $jsonRight.uri -replace ",\s*", ","
+        $targetUrls = $jsonRight.uri -replace ",\s*", "," # Remove spaces between items
         node ./scripts.v3/updatecontenturl --destSubscriptionId  "$(AZURE_SUBSCRIPTION_ID)"  --destResourceGroupName "$(RESOURCE_GROUP_NAME)" --destServiceName "$(APIM_NAME)" --destTenantId "$(AZURE_TENANT_ID)" --destServicePrincipal "$(AZURE_CLIENT_ID)"  --destSecret "$(AZURE_CLIENT_SECRET)" --existingEnvUrls $existingUrls --destEnvUrls $targetUrls
