--- a/tools/pipelines/run-release.yaml
+++ b/tools/pipelines/run-release.yaml
@@ -1,11 +1,3 @@
-trigger:
-  branches:
-    include:
-      - main
-  paths:
-    include:
-      - 'devportal-artifacts/**'
-
 pr:
   branches:
     include:
@@ -13,6 +5,16 @@ pr:
   paths:
     include:
       - 'devportal-artifacts/**'
+  trigger:
+    branches:
+      include:
+        - main
+    paths:
+      include:
+        - 'devportal-artifacts/**'
+    event:
+      - closed
+    condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
 
 parameters:
   - name: OUTPUT_FOLDER_PATH
