--- a/tools/pipelines/run-release.yaml
+++ b/tools/pipelines/run-release.yaml
@@ -1,4 +1,4 @@
-trigger:
+pr:
   branches:
     include:
       - main
@@ -23,6 +23,11 @@ stages:
   jobs:
     - job: push_changes_to_Dev
       displayName: 'Push changes to Dev'
+      condition: |
+        and(
+          eq(variables['Build.Reason'], 'PullRequest'),
+          in(variables['System.PullRequest.PullRequestStatus'], 'completed', 'succeeded')
+        )
       pool:
         vmImage: 'ubuntu-latest'
       steps:
@@ -36,6 +41,11 @@ stages:
   jobs:
     - deployment: push_changes_to_Prod
       displayName: 'Push changes to Prod'
+      condition: |
+        and(
+          eq(variables['Build.Reason'], 'PullRequest'),
+          in(variables['System.PullRequest.PullRequestStatus'], 'completed', 'succeeded')
+        )
       pool:
         vmImage: 'ubuntu-latest'
       environment: 'Prod'
