--- a/tools/pipelines/run-release-with-env.yaml
+++ b/tools/pipelines/run-release-with-env.yaml
@@ -10,6 +10,10 @@ parameters:
   - name: OUTPUT_FOLDER_PATH
     type: string
     default: 'devportal-artifacts'
+  - name: RESOURCE_GROUP_NAME
+    type: string
+  - name: APIM_NAME
+    type: string
 
 steps:
   - task: PowerShell@2
@@ -32,14 +36,14 @@ steps:
       targetType: 'inline'
       script: |
         npm install
-        node ./scripts.v3/cleanup --subscriptionId  "$(AZURE_SUBSCRIPTION_ID)" --resourceGroupName "$(DEV_PORTAL_RG_BASE_NAME)-${{ parameters.ENVIRONMENT }}" --serviceName "$(DEV_PORTAL_APIM_BASE_NAME)-${{ parameters.ENVIRONMENT }}" --tenantId "$(AZURE_TENANT_ID)" --servicePrincipal "$(AZURE_CLIENT_ID)"  --servicePrincipalSecret "$(AZURE_CLIENT_SECRET)"
+        node ./scripts.v3/cleanup --subscriptionId  "$(AZURE_SUBSCRIPTION_ID)" --resourceGroupName "$(RESOURCE_GROUP_NAME)" --serviceName "$(APIM_NAME)" --tenantId "$(AZURE_TENANT_ID)" --servicePrincipal "$(AZURE_CLIENT_ID)"  --servicePrincipalSecret "$(AZURE_CLIENT_SECRET)"
 
   - task: PowerShell@2
     displayName: 'Run Generate'
     inputs:
       targetType: 'inline'
       script: |
-        node ./scripts.v3/generate --publish true --subscriptionId  "$(AZURE_SUBSCRIPTION_ID)" --resourceGroupName "$(DEV_PORTAL_RG_BASE_NAME)-${{ parameters.ENVIRONMENT }}" --serviceName "$(DEV_PORTAL_APIM_BASE_NAME)-${{ parameters.ENVIRONMENT }}" --tenantId "$(AZURE_TENANT_ID)" --servicePrincipal "$(AZURE_CLIENT_ID)"  --servicePrincipalSecret "$(AZURE_CLIENT_SECRET)"  --folder "$(System.DefaultWorkingDirectory)/${{ parameters.OUTPUT_FOLDER_PATH }}/snapshot"
+        node ./scripts.v3/generate --publish true --subscriptionId  "$(AZURE_SUBSCRIPTION_ID)" --resourceGroupName "$(RESOURCE_GROUP_NAME)" --serviceName "$(APIM_NAME)" --tenantId "$(AZURE_TENANT_ID)" --servicePrincipal "$(AZURE_CLIENT_ID)"  --servicePrincipalSecret "$(AZURE_CLIENT_SECRET)"  --folder "$(System.DefaultWorkingDirectory)/${{ parameters.OUTPUT_FOLDER_PATH }}/snapshot"
 
   - task: PowerShell@2
     displayName: 'Run Update Urls'
@@ -52,4 +56,4 @@ steps:
         $jsonRight = (Get-Content "dev-portal/urls.${{ parameters.ENVIRONMENT }}.json".ToLower() -Raw) | ConvertFrom-Json
         $targetUrls = $jsonRight.uri -replace ",\s*", "," # Remove spaces between items
         Write-Host "Target URLs: $targetUrls"
-        node ./scripts.v3/updatecontenturl --destSubscriptionId  "$(AZURE_SUBSCRIPTION_ID)"  --destResourceGroupName "$(DEV_PORTAL_RG_BASE_NAME)-${{ parameters.ENVIRONMENT }}" --destServiceName "$(DEV_PORTAL_APIM_BASE_NAME)-${{ parameters.ENVIRONMENT }}" --destTenantId "$(AZURE_TENANT_ID)" --destServicePrincipal "$(AZURE_CLIENT_ID)"  --destSecret "$(AZURE_CLIENT_SECRET)" --existingEnvUrls $existingUrls --destEnvUrls $targetUrls
+        node ./scripts.v3/updatecontenturl --destSubscriptionId  "$(AZURE_SUBSCRIPTION_ID)"  --destResourceGroupName "$(RESOURCE_GROUP_NAME)" --destServiceName "$(APIM_NAME)" --destTenantId "$(AZURE_TENANT_ID)" --destServicePrincipal "$(AZURE_CLIENT_ID)"  --destSecret "$(AZURE_CLIENT_SECRET)" --existingEnvUrls $existingUrls --destEnvUrls $targetUrls
