--- a/tools/pipelines/run-release-with-env.yaml
+++ b/tools/pipelines/run-release-with-env.yaml
@@ -31,7 +31,7 @@ steps:
       checkLatest: true
 
   - task: PowerShell@2
-    condition: ne('${{ parameters.ENVIRONMENT }}'', 'Dev')
+    condition: ne('${{ parameters.ENVIRONMENT }}', 'Dev')
     displayName: 'Run Cleanup'
     inputs:
       targetType: 'inline'
