--- a/tools/pipelines/run-release-with-env.yaml
+++ b/tools/pipelines/run-release-with-env.yaml
@@ -31,12 +31,18 @@ steps:
       checkLatest: true
 
   - task: PowerShell@2
+    displayName: 'NPM Install'
+    inputs:
+      targetType: 'inline'
+      script: |
+        npm install
+
+  - task: PowerShell@2
     condition: ne('${{ parameters.ENVIRONMENT }}', 'Dev')
     displayName: 'Run Cleanup'
     inputs:
       targetType: 'inline'
       script: |
-        npm install
         node ./scripts.v3/cleanup --subscriptionId  "$(AZURE_SUBSCRIPTION_ID)" --resourceGroupName "${{ parameters.RESOURCE_GROUP_NAME }}" --serviceName "${{ parameters.APIM_NAME }}" --tenantId "$(AZURE_TENANT_ID)" --servicePrincipal "$(AZURE_CLIENT_ID)"  --servicePrincipalSecret "$(AZURE_CLIENT_SECRET)"
 
   - task: PowerShell@2
